style: fix popular posts layout on small devices

--- a/blocks/popular-articles/popular-articles.css
+++ b/blocks/popular-articles/popular-articles.css
@@ -91,6 +91,11 @@
     color: var(--text-color-inverted);
 }
 
+@media (max-width: 350px) {
+    .popular-posts-card {
+        flex-direction: column;
+    }
+}
 
 @media (min-width: 768px) {
     .popular-articles-container.section {
